--- a/python/人工智能/人工智能.md
+++ b/python/人工智能/人工智能.md
@@ -1088,7 +1088,134 @@ from tensorflow import keras
    # 保存模型架构与权重在h5文件中
    model.save('my_model.h5')
    # 加载模型：包括架构与对应的权重
-   mode
+   model = keras.models.load_model('my_model.h5')
    ```
 
    
+
+### 1.4 快速入门模型
+
+#### 1.4.1 相关库的导入
+
+
+
+```py
+# 绘图
+import seaborn as sns
+# 数值计算
+import numpy as np
+# sklearn中的相关工具
+#   划分训练集和测试
+from sklearn.model_selection import train_test_split
+#   逻辑回归
+from sklearn.linear_model import LogisticRegressionCV
+# tf.keras中使用的相关工具
+#   用于模型搭建
+from tensorflow.keras.models import Sequential
+#   建模型的层和激活方法
+from tensorflow.keras.layers import Dense, Activation
+#   数据处理的辅助工具
+from tensorflow.keras import utils
+```
+
+
+
+#### 1.4.2 数据展示和划分
+
+利用seaborn导入像个的数据，iris数据以dataFrame的方式在seaborn进行存储，我们读取后并进行展示
+
+```py
+# 读取数据
+iris = sns.load_dataset("iris")
+# 展示数据的前五行
+iris.head()
+```
+
+![image-20240223142532483](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/65ee0086c281cd0d0c48dbad7e159662.png)
+
+另外，利用seabonr中的pairplot函数探索数据特征间的关系
+
+```py
+# 将数据之间的关系进行可视化
+sns.pairplot(iris, hue='species')
+```
+
+![image-20240223142630433](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/2b897ae4fe1d6e91a5c9e90c2c89146a.png)
+
+将数据划分为训练集和测试集：从iris dataframe中提取原始数据，将花瓣和萼片数据保存在数组X中，表情保存在相应的数组y中:
+
+```py
+# 花瓣和花萼的数据
+X = iris.values[:, :4]
+# 标签值
+y = iris.values[:, 4]
+```
+
+利用train_test_split完成数据集划分
+
+```py
+# 将数据集划分为训练集和测试集
+train_X, test_X, train_y, test_y = train_test_split(X, y, train_size=0.5, test_size=0.5, random_state=0)
+```
+
+
+
+#### 1.4.3 sklearn实现
+
+利用逻辑回归的分类器，并使用交叉验证的方法来选择最优的超参数，实例化LogisticRegressionCV分类器，并使用fit方法进行训练:
+
+```py
+# 实例化分类器
+lr = LogisticRegressionCV()
+# 训练
+lr.fit(train_X, train_y)
+```
+
+利用训练好的分类器进行预测，并计算准确率
+
+```py
+# 计算准确率
+print("Accuracy = {:.2f}".format(lr.score(test_X, test_y)))
+```
+
+逻辑回归的准确率为:
+
+```py
+Accuracy = 0.93
+```
+
+
+
+#### 1.4.4 tf.keras实现
+
+在sklearn中我们只要实例化分类器并利用ft方法进行训练，最后衡量它的性能就可以了，那在tf.keras中与在sklearn非常相似，不同的是:
+
+- 构建分类器时需要进行模型搭建
+- 数据采集时，sklearn可以接收字符串型的标签，如:“setosa”，但是在tf.keras中需要对标签值进行热编码，如下所示:
+
+![image-20240223155810247](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/bcd6b4ef06e364e985fd9f9c405b029a.png)
+
+有很多方法可以实现热编码，比如pandas中的get_dummies0,在这里我们使用tf.keras中的方法进行热编码:
+
+```py
+#进行热编码
+def one_hot_encode_object_array(arr):
+	#去重获取全部的类别
+	uniques，ids = np.unique(arr, return_inverse=True)
+	#返回热编码的结果
+	return utils.to_categorical(ids, len(uniques))
+```
+
+##### 1.4.4.1 数据处理
+
+接下来对标签纸进行热编码
+
+```py
+# 训练集热编码
+train_y_ohe = one_hot_encode_object_array(train_y)
+#测试集热编码
+test_y_ohe = one_hot_encode_object_array(test_y)
+```
+
+##### 1.4.4.2 模型搭建
+
