--- a/python/人工智能/人工智能.md
+++ b/python/人工智能/人工智能.md
@@ -1219,3 +1219,15 @@ test_y_ohe = one_hot_encode_object_array(test_y)
 
 ##### 1.4.4.2 模型搭建
 
+在sklearn中，模型都是现成的。tf.Keras是一个神经网络库,我们需要根据数据和标签值构建神经网络。神经网络可以发现特征与标签之间的复杂关系。神经网络是一个高度结构化的图，其中包含一个或多个隐藏层。每个隐藏层都包含一个或多个神经元。神经网络有多种类别，该程序使用的是密集型神经网络，也称为全连接神经网络:一个层中的神经元将从上一层中的每个神经元获取输入连接。例如，图 2 显示了一个密集型神经网络，其中包含1 个输入层、2个隐藏层以及1个输出层
+如下图所示:
+
+![image-20240224121342401](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/4c19fa61d3bbfa88826a85859eb4073e.png)
+
+上图 中的模型经过训练并馈送未标记的样本时，它会产生3 个预测结果:相应尾花属于指定品种的可能性。对于该示例，输出预测结果的总和是 1.0。该预测结果分解如下:山尾为 0.02，变色鸢尾为 0.95，维吉尼亚鸢尾为 0.03。这意味着该模型预测某个无标签鸢尾花样本是变色鸢尾的概率为95%。
+
+TensorFlow `tf.keras` API是创建模型和层的首选方式。通过该AP1，您可以轻松地构建模型并进行实验，而将所有部分连接在一起的复杂工作则由 Keras 处理。
+
+`tf.keras.Sequential`模型是层的线性堆叠。该模型的构造函数会采用一系列层实例;在本示例中，采用的是2个密集层 (分别包含 10 个节点)以及1个输出层(包含3 个代表标签预测的节点)。第一个层的`input_shape`参数对应该数据集中的特征数量:
+
+```py
