--- a/随记/随记.md
+++ b/随记/随记.md
@@ -857,3 +857,60 @@ ioptimize-pro
 └── vitest.config.ts
 ```
 
+
+
+## 21. 使用vite将项目打包为单个html文件
+
+使用vite-signel-file插件可以将项目打包为单个html
+
+> 注意：单个html不支持跳转页面，不支持大的base64图片，所以尽量选择在线图片
+
+安装插件
+
+```bash
+pnpm install vite-plugin-singlefile -D
+```
+
+使用插件
+
+vite.config.ts
+
+```ts
+import { fileURLToPath, URL } from 'node:url'
+
+import { defineConfig } from 'vite'
+import vue from '@vitejs/plugin-vue'
+import { viteSingleFile } from 'vite-plugin-singlefile'
+
+// https://vitejs.dev/config/
+export default defineConfig({
+  plugins: [
+    vue(),
+    viteSingleFile(),
+  ],
+  resolve: {
+    alias: {
+      '@': fileURLToPath(new URL('./src', import.meta.url))
+    }
+  },
+  build: {
+    assetsInlineLimit: Number.MAX_SAFE_INTEGER,
+  },
+})
+```
+
+打包
+
+```bash
+pnpm build
+```
+
+生成的dist目录
+
+```
+dist
+├── favicon.ico
+└── index.html
+```
+
+注意，网页图标不会打包进html中，可自行写脚本转为svg代码或者base64数据
