--- a/python/人工智能/人工智能.md
+++ b/python/人工智能/人工智能.md
@@ -1131,7 +1131,7 @@ iris = sns.load_dataset("iris")
 iris.head()
 ```
 
-![image-20240223142532483](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/65ee0086c281cd0d0c48dbad7e159662.png)
+![image-20240227154259113](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/55d0294aea108100184e3da6e88949a5.png)
 
 另外，利用seabonr中的pairplot函数探索数据特征间的关系
 
@@ -1140,7 +1140,7 @@ iris.head()
 sns.pairplot(iris, hue='species')
 ```
 
-![image-20240223142630433](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/2b897ae4fe1d6e91a5c9e90c2c89146a.png)
+![image-20240227154438362](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/005ec5e75c8da0ec01cd6da25e9344b8.png)
 
 将数据划分为训练集和测试集：从iris dataframe中提取原始数据，将花瓣和萼片数据保存在数组X中，表情保存在相应的数组y中:
 
@@ -1264,6 +1264,14 @@ _________________________________________________________________
 
 激活函数可决定层中每个节点的输出形状。这些非线性关系很重要，如果没有它们，模型将等同于单个层。激活函数有很多，但隐藏层通常使用 ReLU。
 
+模型结构
+
+```py
+utils.plot_model(model, show_shapes=True)
+```
+
+![image-20240227154513964](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/85546650e3c05ce99d841c6bf13b8680.png)
+
 隐藏层和神经元的理想数量取决于问题和数据集。与机器学习的多个方面一样，选择最佳的神经网络形状需要一定的知识水平和实验基础。一般来说，增加隐藏层和神经元的数量通常会产生更强大的模型，而这需要更多数据才能有效地进行训练
 
 ##### 1.4.4.3 模型训练和预测 
@@ -1271,15 +1279,23 @@ _________________________________________________________________
 在训练和评估阶段，我们都需要计算模型的损失。这样可以衡量模型的预测结果与预期标签有多大偏差，也就是说，模型的效果有多差。我们希望尽可能减小或优化这个值，所以我们设置优化策略和损失函数，以及模型精度的计算方法:
 
 ```py
-# 
+# 设置模型的相关参数，优化器，损失函数和评价指标
+model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])
+```
+
+转换类型
+
+```py
+train_X = np.array(train_X, dtype=np.float32)
+test_X = np.array(test_X, dtype=np.float32)
 ```
 
 接下来与在sklearn中相同，分别调用fit和predict方法进行预测即可。
 
 ```py
+# 模型训练：expochs,训练样本送入网络中的次数，batch_size:每次训练的送入到网络中的样本个数
+model.fit(train_X, train_y_ohe, epochs=10, batch_size=1, verbose=1)
 ```
-
-
 
 上述代码完成的是
 
@@ -1292,14 +1308,228 @@ _________________________________________________________________
 训练过程展示如下:
 
 ```py
+Epoch 1/10
+WARNING:tensorflow:From C:\Users\Administrator\Desktop\workspace\pycharm-space\ai-learn\tensorflow-demo\.venv\lib\site-packages\keras\src\utils\tf_utils.py:492: The name tf.ragged.RaggedTensorValue is deprecated. Please use tf.compat.v1.ragged.RaggedTensorValue instead.
+WARNING:tensorflow:From C:\Users\Administrator\Desktop\workspace\pycharm-space\ai-learn\tensorflow-demo\.venv\lib\site-packages\keras\src\engine\base_layer_utils.py:384: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.
+75/75 [==============================] - 1s 2ms/step - loss: 4.1671 - accuracy: 0.3467
+Epoch 2/10
+75/75 [==============================] - 0s 2ms/step - loss: 2.0127 - accuracy: 0.0933
+Epoch 3/10
+75/75 [==============================] - 0s 2ms/step - loss: 1.4497 - accuracy: 0.2133
+Epoch 4/10
+75/75 [==============================] - 0s 3ms/step - loss: 1.1256 - accuracy: 0.4400
+Epoch 5/10
+75/75 [==============================] - 0s 3ms/step - loss: 0.9793 - accuracy: 0.7200
+Epoch 6/10
+75/75 [==============================] - 0s 2ms/step - loss: 0.9058 - accuracy: 0.6400
+Epoch 7/10
+75/75 [==============================] - 0s 2ms/step - loss: 0.8344 - accuracy: 0.7333
+Epoch 8/10
+75/75 [==============================] - 0s 2ms/step - loss: 0.7681 - accuracy: 0.7333
+Epoch 9/10
+75/75 [==============================] - 0s 2ms/step - loss: 0.7148 - accuracy: 0.7333
+Epoch 10/10
+75/75 [==============================] - 0s 2ms/step - loss: 0.6623 - accuracy: 0.7333
 ```
 
 与sklearn中不同，对训练好的模型进行评估时，与sklearn.score方法对应的时tf.keras.evaluate()方法，返回的时损失函数和在complie模型时要求的指标：
 
 ```py
+# 模型评估
+loss, accuracy = model.evaluate(test_X, test_y_ohe, verbose=1)
 ```
 
 分类器的准确率为：
 ```py
+3/3 [==============================] - 0s 4ms/step - loss: 0.7589 - accuracy: 0.6000
 ```
 
+
+
+## 2. 深度神经网络
+
+### 2.1 什么是神经网络
+
+人工神经网络 (Artificial Neural Network，简写为ANN)也简称为神经网络 (NN)，是一种模仿生物神经网络结构和功能的计算模型。人脑可以看做是一个生物神经网络，由众多的神经元连接而成。各个神经元传递复杂的电信号，树突接收到输入信号，然后对信号进行处理，通过轴突输出信号。下图是生物神经元示意图:
+
+![image-20240227105320829](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/208b13877de597b91e0f9ff58ec8e0e5.png)
+
+那怎么构建人工神经网络中的神经元呢?
+
+![image-20240227105442387](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/0ad89ef2cf7ea5c3ed19421fca753319.png)
+
+受生物神经元的启发，人工神经元接收来自其他神经元或外部源的输入，每个输入都有一个相关的权值(w)，它是根据该输入对当前神经元的重要性来确定的，对该输入加权并与其他输入求和后,
+经过一个激活函数f，计算得到该神经元的输出。
+
+那接下来我们就利用神经元来构建神经网络，相邻层之间的神经元相互连接，并给每一个连接分配一个强度，如下图所示:
+
+![image-20240227105637466](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/84a099bd1166e9fbd3e86949fb8af43c.png)
+
+神经网络中信息只向一个方向移动，即从输入节点向前移动，通过隐藏节点，再向输出节点移动，网络中没有循环或者环。其中的基本构件是:
+
+- **输入层**:即输入x的那一层
+- **输出层**:即输出y的那一层
+- **隐藏层**: 输入层和输出层之间都是隐藏层
+
+特点是:
+
+- 同一层的神经元之间没有连接
+- 第N层的每个神经元和第N-1层的所有神经元相连(这就是full connected的含义)，第N-1层神经
+  元的输出就是第N层神经元的输入。
+- 每个连接都有一个权值。
+
+### 2.2 神经元是如何工作的
+
+人工神经元接收到一个或多个输入，对他们进行加权并相加，总和通过一个非线性函数产生输出。
+
+![image-20240227120158873](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/cef9833be96cda423153afdf03e5724b.png)
+
+### 2.3 激活函数
+
+在神经元中引入了激活函数，它的本质是向神经网络中引入非线性因素的，通过激活函数，神经网络就可以拟合各种曲线。如果不用激活函数，每一层输出都是上层输入的线性函数，无论神经网络有多少层，输出都是输入的线性组合，引入非线性函数作为激活函数，那输出不再是输入的线性组合，可以逼近任意函数。常用的激活函数有:
+
+1. Sigmoid/logistics函数
+2. tanh(双曲正切曲线)
+3. RELU
+4. LeakReLuctant
+5. SoftMax
+
+#### 2.3.1 Sigmoid/logistics函数
+
+数学表达式为
+$$
+f(x)=\frac{1}{1+e^{-x}}
+$$
+曲线如下图所示
+
+![image-20240227153212917](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/e523ea24f0415083de675de303a14847.png)
+
+sigmoid 在定义域内处处可导，且两侧导数逐渐趋近于0。如果X的值很大或者很小的时候，那么
+函数的梯度(函数的斜率)会非常小，在反向传播的过程中，导致了向低层传递的梯度也变得非常
+小。此时，网络参数很难得到有效训练。这种现象被称为梯度消失。一般来说， sigmoid 网络在5
+层之内就会产生梯度消失现象。而且，该激活函数并不是以0为中心的，所以在实践中这种激活函
+数使用的很少。sigmoid函数一般只用于二分类的输出层。
+
+实现方法
+
+```py
+# 导入相应的工具包
+import tensorflow as tf
+import tensorflow.keras as keras
+import matplotlib.pyplot as plt
+import numpy as np
+
+# 定义x的取值范围
+x = np.linspace(-10, 10, 100)
+# 直接使用tensorflow 实现
+y = tf.nn.sigmoid(x)
+# 绘图
+plt.plot(x,y)
+plt.grid()
+```
+
+![image-20240227155025049](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/da2c5e0b1d74370dfa60c201a578008f.png)
+
+#### 2.3.2 tanh(双曲正切曲线)
+
+数学表达式
+$$
+tanh(x)=\frac{e^x-e^{-x}}{e^x+e^{-x}}
+$$
+曲线如下图
+
+![image-20240227155234285](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/59786800f814ce28651af32276c5bcf2.png)
+
+tanh也是一种非常常见的激活函数。与sigmoid相比，它是以0为中心的，使得其收敛速度要比sigmoid快，减少送代次数。然而，从图中可以看出，tanh两侧的导数也为0，同样会造成梯度消失。
+
+若使用时可在隐藏层使用tanh函数，在输出层使用sigmoid函数
+
+实现方法为:
+
+```py
+# 定义x的取值范围
+x = np.linspace(-10, 10, 100)
+# 直接使用tensorflow实现
+y = tf.nn.tanh(x)
+#绘图
+plt.plot(x, y)
+```
+
+![image-20240227160119864](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/646d2dcc539e2a4917260f7350f7864c.png)
+
+
+
+#### 2.3.3 RELU
+
+数学表达式
+$$
+f(x)=max(0,x)
+$$
+曲线如下图所示
+
+![image-20240227160236747](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/57b9c63a718e7dca7f3c135acfab7f08.png)
+
+ReLU是目前最常用的激活函数。从图中可以看到，当x<0时，ReLU导数为0，而当x>0时，则不存
+在饱和问题。所以，ReLU 能够在x>0时保持梯度不衰减，从而缓解梯度消失问题。然而，随着训
+练的推进，部分输入会落入小于0区域，导致对应权重无法更新。这种现象被称为“神经元死亡”
+
+与sigmoid相比，RELU的优势是:
+
+- 采用sigmoid函数，计算量大(指数运算)，反向传播求误差梯度时，求导涉及除法，计算量
+  相对大，而采用Relu激活函数，整个过程的计算量节省很多。
+- sigmoid函数反向传播时，很容易就会出现梯度消失的情况，从而无法完成深层网络的训练。
+- Relu会使一部分神经元的输出为0，这样就造成了网络的稀疏性，并且减少了参数的相互依存
+  关系，缓解了过拟合问题的发生
+
+实现方法为
+
+```py
+x = np.linspace(-10, 10, 100)
+y = tf.nn.relu(x)
+# 绘图
+plt.plot(x,y)
+```
+
+![image-20240227171658738](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/cf6bc8b812bbc9f3a575d64f1bb08e24.png)
+
+#### 2.3.4 LeakyReLu
+
+该激活函数是对RELU的改进
+
+数学表达式为
+$$
+f(x)=max(0.1x,x)
+$$
+曲线如下所示
+
+![image-20240227171941521](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/85f83bcd8dd50195d8aeb77730399a57.png)
+
+实现方法为
+
+```py
+x=np.linspace(-10, 10, 100)
+y= tf.nn.leaky_relu(x)
+plt.plot(x,y)
+```
+
+![image-20240227172627012](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/25377e07fbfd2d0d533728c06403476b.png)
+
+#### 2.3.5 SoftMax
+
+softmax用于多分类过程中，它是二分类函数sigmoid在多分类上的推广，目的是将多分类的结果
+以概率的形式展现出来。
+计算方法如下图所示:
+$$
+softmax(Z_i)=\frac{e^{z_i}}{\sum_je^{z_j}}
+$$
+
+
+使用方法如下
+
+
+
+#### 2.3.6 其他激活函数
+
+#### 2.3.7 如何选择激活函数
+
+ 
