--- a/python/人工智能/人工智能.md
+++ b/python/人工智能/人工智能.md
@@ -290,9 +290,11 @@
 - RMSE是一个衡量回归模型误差率的常用公式。不过，它仅能比较误差是相同单位的模型。
 
 $$
-RMSE=\sqrt{\frac{\sum\limits_{i=1}^n(p_i-a_i)^2}{n}}
-\\a=actual~target
-\\ p=predicted~target
+\begin{align}
+RMSE&=\sqrt{\frac{\sum\limits_{i=1}^n(p_i-a_i)^2}{n}} \\
+a&=actual~target \\
+p&=predicted~target
+\end{align}
 $$
 
 举例
@@ -1348,7 +1350,9 @@ loss, accuracy = model.evaluate(test_X, test_y_ohe, verbose=1)
 
 ## 2. 深度神经网络
 
-### 2.1 什么是神经网络
+### 2.1 神经网络
+
+#### 2.1.1 什么是神经网络
 
 人工神经网络 (Artificial Neural Network，简写为ANN)也简称为神经网络 (NN)，是一种模仿生物神经网络结构和功能的计算模型。人脑可以看做是一个生物神经网络，由众多的神经元连接而成。各个神经元传递复杂的电信号，树突接收到输入信号，然后对信号进行处理，通过轴突输出信号。下图是生物神经元示意图:
 
@@ -1378,13 +1382,13 @@ loss, accuracy = model.evaluate(test_X, test_y_ohe, verbose=1)
   元的输出就是第N层神经元的输入。
 - 每个连接都有一个权值。
 
-### 2.2 神经元是如何工作的
+#### 2.1.2 神经元是如何工作的
 
 人工神经元接收到一个或多个输入，对他们进行加权并相加，总和通过一个非线性函数产生输出。
 
 ![image-20240227120158873](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/cef9833be96cda423153afdf03e5724b.png)
 
-### 2.3 激活函数
+#### 2.1.3 激活函数
 
 在神经元中引入了激活函数，它的本质是向神经网络中引入非线性因素的，通过激活函数，神经网络就可以拟合各种曲线。如果不用激活函数，每一层输出都是上层输入的线性函数，无论神经网络有多少层，输出都是输入的线性组合，引入非线性函数作为激活函数，那输出不再是输入的线性组合，可以逼近任意函数。常用的激活函数有:
 
@@ -1394,7 +1398,7 @@ loss, accuracy = model.evaluate(test_X, test_y_ohe, verbose=1)
 4. LeakReLuctant
 5. SoftMax
 
-#### 2.3.1 Sigmoid/logistics函数
+##### 2.1.3.1 Sigmoid/logistics 函数
 
 数学表达式为
 $$
@@ -1430,7 +1434,7 @@ plt.grid()
 
 ![image-20240227155025049](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/da2c5e0b1d74370dfa60c201a578008f.png)
 
-#### 2.3.2 tanh(双曲正切曲线)
+##### 2.1.3.2 tanh(双曲正切曲线)
 
 数学表达式
 $$
@@ -1459,7 +1463,7 @@ plt.plot(x, y)
 
 
 
-#### 2.3.3 RELU
+##### 2.1.3.3 RELU
 
 数学表达式
 $$
@@ -1492,7 +1496,7 @@ plt.plot(x,y)
 
 ![image-20240227171658738](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/cf6bc8b812bbc9f3a575d64f1bb08e24.png)
 
-#### 2.3.4 LeakyReLu
+##### 2.1.3.4 LeakyReLu
 
 该激活函数是对RELU的改进
 
@@ -1514,7 +1518,7 @@ plt.plot(x,y)
 
 ![image-20240227172627012](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/25377e07fbfd2d0d533728c06403476b.png)
 
-#### 2.3.5 SoftMax
+##### 2.1.3.5 SoftMax
 
 softmax用于多分类过程中，它是二分类函数sigmoid在多分类上的推广，目的是将多分类的结果
 以概率的形式展现出来。
@@ -1541,7 +1545,7 @@ y = tf.nn.softmax(x)
 
 
 
-#### 2.3.6 如何选择激活函数
+##### 2.1.3.6 如何选择激活函数
 
  隐藏层
 
@@ -1559,23 +1563,23 @@ y = tf.nn.softmax(x)
 
 
 
-### 2.4 参数初始化
+#### 2.1.4 参数初始化
 
 对于某一个神经元来说，需要初始化的参数有两类:一类是权重W，还有一类是偏置b,偏置b初始
 化为0即可。而权重W的初始化比较重要，我们着重来介绍常见的初始化方式。
 
 ![image-20240227224925578](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/8f560ec60517bcca86484dfe5e6976d9.png)
 
-#### 2.4.1 随机初始化
+##### 2.1.4.1 随机初始化
 
 随机初始化从均值为0，标准差是1的高斯分布中取样，使用一些很小的值对参数W进行初始化
 
-#### 2.4.2 标准初始化
+##### 2.1.4.2 标准初始化
 
 权重参数初始化从区间均匀随机取值。即在(-1/d,1/Jd)均匀分布中生成当前神经元的权重，其中
 d为每个神经元的输入数量。
 
-#### 2.4.3 Xavier初始化
+##### 2.1.4.3 Xavier 初始化
 
 该方法的基本思想是各层的激活值和梯度的方差在传播过程中保持一致，也叫做Glorot初始
 化。在tf.keras中实现的方法有两种:
@@ -1645,7 +1649,7 @@ tf.Tensor(
 
 
 
-#### 2.4.4 He初始化
+##### 2.1.4.4 He 初始化
 
 he初始化，也称为Kaiming初始化，出自大神何恺明之手，它的基本思想是正向传播时，激活值的
 方差保持不变;反向传播时，关于状态值的梯度的方差保持不变。在tf.keras中也有两种:
@@ -1710,7 +1714,7 @@ tf.Tensor(
 
 
 
-### 2.5 神经网络的搭建
+#### 2.1.5 神经网络的搭建
 
 搭建如下图所示的神经网络
 
@@ -1736,7 +1740,7 @@ tf.keras.layers.Dense(
 - Kernel_initializer:权重的初始化方式，默认是Xavier初始化
 - bias_initializer:偏置的初始化方式，默认为0
 
-#### 2.5.1 通过Sequential构建
+##### 2.1.5.1 通过 Sequential 构建
 
 `Sequential()`提供一个层的列表，就能快速地建立一个神经网络模型，实现方法如下所示
 
@@ -1788,7 +1792,7 @@ _________________________________________________________________
 
 
 
-#### 2.5.2 使用function API构建
+##### 2.1.5.2 使用 function API 构建
 
 ```python
 import tensorflow as tf
@@ -1828,7 +1832,7 @@ Non-trainable params: 0 (0.00 Byte)
 _________________________________________________________________
 ```
 
-#### 2.5.3 通过model的子类构建
+##### 2.1.5.3 通过 model 的子类构建
 
 通过model的子类构建模型，此时需要在`__init__`中定义神经网络的层，在`call`方法中定义网络的前向传播过程，实现方法如下
 
@@ -1886,7 +1890,7 @@ _________________________________________________________________
 
 
 
-### 2.6 神经网络的优缺点
+#### 2.1.6 神经网络的优缺点
 
 1. 优点
 
@@ -1904,7 +1908,7 @@ _________________________________________________________________
 
 
 
-### 2.7 损失函数
+### 2.2 损失函数
 
 ![image-20240228092603305](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/5455d59f9a1905eaf45c250f00a2d4ba.png)
 
@@ -1915,11 +1919,11 @@ _________________________________________________________________
 
 
 
-#### 2.7.1 分类任务
+#### 2.2.1 分类任务
 
 在深度学习的分类任务中使用最多的是交叉损失函数
 
-##### 2.7.1.1 多分类任务
+##### 2.2.1.1 多分类任务
 
 在多分类任务通常使用softmax将logits转换为概率的形式，所以多分类的交叉熵损失也叫做
 softmax损失，它的计算方法是:
@@ -1964,7 +1968,7 @@ cce(y_true, y_pred).numpy()
 
 
 
-##### 2.7.1.2 二分类任务
+##### 2.2.1.2 二分类任务
 
 在处理二分类任务时，我们不在使用softmax激活函数，而是使用sigmoid激活函数，那损失函数
 也相应的进行调整，使用二分类的交叉熵损失函数:
@@ -1992,11 +1996,11 @@ bce(y_true, y_pred).numpy()
 
 
 
-#### 2.7.2 回归任务
+#### 2.2.2 回归任务
 
 回归任务中常用的损失函数有以下几种
 
-##### 2.7.2.1 MAE损失 
+##### 2.2.2.1 MAE 损失 
 
 Mean absolute loss(MAE)也被称为L1Loss，是以绝对误差作为距离
 $$
@@ -2027,7 +2031,7 @@ mae(y_true, y_pred).numpy()
 
 
 
-##### 2.7.2.2 MSE损失
+##### 2.2.2.2 MSE 损失
 
 Mean SquaredLoss/Quadratic Loss(MSE loss)也被称为L2 loss，或欧氏距离，它以误差的平方和作为距离
 
@@ -2057,9 +2061,8 @@ mse(y_true, y_pred).numpy()
 0.5
 ```
 
-##### 2.7.3 smooth L1损失
+##### 2.2.2.3 smooth L1损失
 $$
-
 smooth_{{L_{1}}}(x)=
 \left\{
 \begin{array}{ll}
@@ -2094,9 +2097,9 @@ h(y_true, y_pred).numpy()
 
 
 
-## 3. 深度学习的优化方法
+### 2.3 深度学习的优化方法
 
-### 3.1 梯度下降算法
+#### 2.3.1 梯度下降算法
 
 梯度下降法简单来说就是一种寻找使损失函数最小化的方法。大家在机器学习阶段已经学过该算
 法，所以我们在这里就简单的回顾下，从数学上的角度来看，梯度的方向是函数增长速度最快的方向，那么梯度的反方向就是函数减少最快的方向，所以有:
@@ -2176,11 +2179,11 @@ var.numpy()
 
 
 
-### 3.2 反向传播算法(BP 算法)
+#### 2.3.2 反向传播算法(BP 算法)
 
 利用反向传播算法对神经网络进行训练。该方法与梯度下降算法相结合，对网络中所有权重计算损失函数的梯度，并利用梯度值来更新权值以最小化损失函数。在介绍BP算法前，我们先看下前向传播与链式法则的内容。
 
-#### 3.2.1 前向传播和反向传播
+##### 2.3.2.1 前向传播和反向传播
 
 前向传播指的是数据输入的神经网络中，逐层向前传输，一直到运算到输出层为止
 
@@ -2188,7 +2191,7 @@ var.numpy()
 
 在网络的训练过程中经过前向传播后得到的最终结果跟训练样本的真实值总是存在一定误差，这个误差便是损失函数。想要减小这个误差，就用损失函数ERROR，从后往前，依次求各个参数的偏导，这就是反向传播 (Back Propagation)
 
-#### 3.2.2 链式法则
+##### 2.3.2.2 链式法则
 
 反向传播算法是利用链式法则进行梯度求解及权重更新的。对于复杂的复合函数，我们将其拆分为一系列的加减乘除或指数，对数，三角函数等初等函数，通过链式法则完成复合函数的求导。为简单起见，这里以一个神经网络中常见的复合函数的例子来说明 这个过程令复合函数 f(x;w,b)为
 $$
@@ -2212,18 +2215,18 @@ $$
 
 
 
-#### 3.2.3 反向传播算法
+##### 2.3.2.3 反向传播算法
 
 
 
-### 3.3 梯度下降优化方法
+#### 2.3.3 梯度下降优化方法
 
 梯度下降算法在进行网络训练时，会遇到鞍点，局部极小值这些问题，那我们怎么改进SGD呢?在
 这里我们介绍几个比较常用的
 
 ![image-20240228172320687](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/c341634d7f9e21c026c8cbfa5111cd1c.png)
 
-#### 3.3.1 动量算法
+##### 2.3.3.1 动量算法
 
 动量算法主要解决鞍点问题。在介绍动量法之前，我们先来看下指数加权平均数的计算方法。
 
@@ -2306,12 +2309,16 @@ print("第二次更新步长={}".format((val1 - val2).numpy()))
 数，在 Momentum 的基础上进一步加快收敛，提高响应性，该算法实现依然使用 SGD 方法，要设
 置 nesterov 设置为 true.
 
-#### 3.3.2 AdaGrad
+##### 2.3.3.2 AdaGrad
 AdaGrad 算法会使用**一个小批量随机梯度**g_t 按元素平方的累加变量 st。在时间步 0，AdaGrad
-将 s 0 中每个元素初始化为 0。在时间步 t，首先将小批量随机梯度 gt 按元素平方后累加到变量 st:
-![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/ac2ee5427561b7d8f777cc0c7f895e6d.png)
-其中 O 是按元素相乘。接着，我们将目标函数自变量中每个元素的学习率通过按元素运算重新调整
-![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/a356c694be4b93bd6b93ba7c4f8864a3.png)
+将 s0 中每个元素初始化为 0。在时间步 t，首先将小批量随机梯度 gt 按元素平方后累加到变量 st:
+$$
+s_{t-1}+g_{t} ⊙ g_{t} \to s_{t}
+$$
+其中 ⊙ 是按元素相乘。接着，我们将目标函数自变量中每个元素的学习率通过按元素运算重新调整
+$$
+w_{t-1}-\frac{\alpha}{\sqrt{ s_{t} + \epsilon }} ⊙ g_{t} \to w_{t}
+$$
 其中 a 是学习率，e 是为了维持数值稳定性而添加的常数，如 $10^{-6}$。这里开方、除法和乘法的运算都是按元素运算的。这些按元素运算使得目标函数自变量中每个元素都分别拥有自己的学习率
 
 在 tf.keras 中实现方法是：
@@ -2341,7 +2348,7 @@ var.numpy()
 0.9046537
 ```
 
-#### 3.3.3 RMSprop
+##### 2.3.3.3 RMSprop
 AdaGrad 算法在迭代后期由于学习率过小, 能较难找到最优解。为了解决这一问题，RMSProp 算法对 AdaGrad 算法做了一点小小的修改。
 
 不同于 AdaGrad 算法里状态变量 st 是截至时间步 t 所有小批量随机梯度 qt 按元素平方和 RMSProp(RootMean Square Prop)算法将这些梯度按元素平方做指数加权移动平均
@@ -2354,9 +2361,760 @@ w:&=w-\frac{a}{\sqrt{ s_{dw} + \epsilon }}dw \\ \\
 b:&=b-\frac{a}{\sqrt{ s_{db} + \epsilon }}db \\
 \end{align}
 $$
+
 其中 $\epsilon$ 是一样为了维持数值稳定一个常数。最终自变量每个元素的学习率在迭代过程中就不再一直降低。RMSProp 有助于减少抵达最小值路径上的摆动，并允许使用一个更大的学习率 a，从而加快算法学习速度。
 
 在 tf. keras 中实现时，使用的方法是:
 ```python
+opt = tf.keras.optimizers.RMSprop(learning_rate=0.1)
+```
+
+例子
+```python
+import tensorflow as tf  
+  
+# 实例化优化方法RMSprop  
+opt = tf.keras.optimizers.RMSprop(learning_rate=0.1)  
+# 定义要调整的参数  
+var = tf.Variable(1.0)  
+  
+  
+# 定义损失函数  
+def loss(): return (var ** 2) / 2.0  
+opt.minimize(loss, [var])  
+var.numpy()
+```
+输出
+```
+0.6837723
+```
+
+##### 2.3.3.4 Adam
+Adam 优化算法 (Adaptive Moment Estimation 自适应矩估计) 将 Mnntum 和 RMSProp 算法结合在一起。Adam 算法在 RMSProp 算法基础上对小批量随机梯度也做了指数加权移动平均。
+
+假设用每一个 mini-batch 计算 dW、db，第 t 次迭代时:
+
+$$
+\begin{align}
+v_{dW} &= \beta_{1}dW+(1-\beta_{1})dW \\
+v_{db} &= \beta_{1}v_{db}+(1-\beta_{1})db \\
+v_{dW}^{corrected}[l] &= \frac{v_{dW}[l]}{1-{(\beta_{1})^{t}}} \\
+s_{dW} &= \beta_{2}s_{dW}+(1-\beta_{2})(dW)^{2} \\
+s_{db} &= \beta_{2}s_{db}+(1-\beta_{2})(db)^{2} \\
+s_{dW}^{corrected}[l] &= \frac{s_{dW}[l]}{1-(\beta_{2})^{t}}
+\end{align}
+$$
+
+其中 I 为某一层，t 为移动平均第次的值
+
+Adam 算法的参数更新:
+
+$$
+\begin{align}
+W:&=W-\alpha \frac{ v_{dW}^{corrected}}{\sqrt{ s_{dW}^{corrected} + \epsilon }} \\
+b:&=b-\alpha \frac{ v_{db}^{corrected}}{\sqrt{ s_{dW}^{corrected} + \epsilon }} \\
+\end{align}
+$$
+
+建议的参数设置的值:
+- 学习率 $\alpha$: 需要尝试一系列的值，来寻找比较合适的
+- $\beta_{1}$: 常用的缺省值为 0.9
+- $\beta_{2}$: 建议为 0.999
+- $\epsilon$: 默认值 1e-8
+
+例子
+```python
+import tensorflow as tf  
+  
+# 实例化优化方法Adam  
+opt = tf.keras.optimizers.Adam(learning_rate=0.1)  
+# 定义要调整的参数  
+var = tf.Variable(1.0)  
+  
+  
+# 定义损失函数  
+def loss(): return (var ** 2) / 2.0  
+  
+  
+opt.minimize(loss, [var])  
+var.numpy()
+```
+输出
+```
+0.900001
+```
+
+#### 2.3.4 学习率退火
+在训练神经网络时，一般情况下学习率都会随着训练而变化，这主要是由于，在神经网络训练的后期，如果学习率过高，会造成 loss 的振荡，但是如果学习率减小的过快，又会造成收敛变慢的情况。
+
+##### 2.3.4.1 分段常数衰减
+分段常数衰减是在事先定义好的训练次数区间上，设置不同的学习率常数。刚开始学习率大一些之后越来越小，区间的设置需要根据样本量调整，一般样本量越大区间间隔应该越小。
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/2b154f7582f1b64e7bb92c276eef34ea.png)
+
+例子
+
+```python
+# 设置的分段更新的step值  
+bundaries = [100000, 110000]  
+# 不同的step对应的学习率  
+values = [1.0, 0.5 ,0.1]  
+# 实例化进行学习的更新  
+learning_rate_fn = tf.keras.optimizers.schedules.PiecewiseConstantDecay(bundaries, values)
+```
+
+##### 2.3.4.2 指数衰减
+指数衰减可以用如下的数学公式表示
+
+$$
+a=a_{0}e^{-kt}
+$$
+
+其中，t 表示迭代次数，$a_{0}$, k 是超参数
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/c49648264a3b1cfcd0cab1b2c175b5f4.png)
+
+##### 2.3.4.3 1/t 衰减
+1/t 衰减可以用如下的数学公式表示
+
+$$
+a=\frac{a_{0}}{1+kt}
+$$
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/a4978b0df702a34d9af202c457221f04.png)
+
+### 2.4 深度学习正则化
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/912f2e2fc9591b0c44558b07cd432e47.png)
+
+在设计机器学习算法时不仅要求在训练集上误差小，而且希望在新样本上的泛化能力强。许多机器学习算法都采用相关的策略来减小测试误差，这些策略被统称为正则化。因为神经网络的强大的表示能力经常遇到过拟合，所以需要使用不同形式的正划化策略。
+
+正则化通过对算法的修改来减少泛化误差，目前在深度学习中使用较多的策略有参数范数惩罚，提前终止，DropOut 等，接下来我们对其进行详细的介绍。
+
+
+#### 2.4.1 L1 与 L2 正则化
+
+L1 和 L2 是最常见的正则化方法。它们在损失函数 (cost function)中增加一个正则项，由于添加了这个正则化项，权重矩阵的值减小，因为它假定具有更小权重矩阵的神经网络导致更简单的模型。因此，它也会在一定程度上减少过拟合。然而，这个正则化项在 L1 和 L2 中是不同的。
+
+1. L2 正则化
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/ffbeacbfffc03892d19b461f056b94b0.png)
+
+这里的入是正则化参数，它是一个需要优化的超参数。L 2 正则化又称为权重衰减，因为其导致权重趋向于 0 (但不全是 0)
+
+2. L1 正则化
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/f6f0a33efa5bc9deb559dc2355b7e965.png)
+
+这里，我们惩罚权重矩阵的绝对值。其中，入为正则化参数，是超参数，不同于 L2，权重值可能被减少到 0. 因此，L1 对于压缩模型很有用。其它情况下，一般选择优先选择 L2 正则化。
+
+#### 2.4.2 Dropout 正则化
+
+dropout 是在深度学习领域最常用的正则化技术。Dropout 的原理很简单: 假设我们的神经网络结构如下所示，在每个迭代过程中，随机选择某些节点，并且删除前向和后向连接。
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/836328b705ab0b668c5fedfebba6f994.png)
+
+因此，每个迭代过程都会有不同的节点组合，从而导致不同的输出，这可以看成机器学习中的集成方法 (ensemble technique)。集成模型一般优于单一模型，因为它们可以捕获更多的随机性。相似地，dropout 使得神经网络模型优于正常的模型
+
+#### 2.4.3 提前停止
+
+提前停止 (earlystopping, 是将-部分训练集作为验证集 (validation set)。当验证集的性能越来越差时或者性能不再提升，则立即停止对该模型的训练。这被称为提前停止。
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/68fe2b8ef0a898e1a947bcb910a013b0.png)
+
+在上图中，在虚线处停止模型的训练，此时模型开始在训练数据上过拟合
+
+
+#### 2.4.4 批标准化
+
+批标准化 (BN 层, Batch Normalization)是 2015 年提出的一种方法，在进行深度网络训练时，大多会采取这种算法，与全连接层一样，BN 层也是属于网络中的一层。
+
+BN 层是针对单个神经元进行，利用网络训练时一个 mini-batch 的数据来计算该神经元 xi 的均值和方差, 归一化后并重构，因而称为 Batch Normalization。在每一层输入之前，将数据进行 BN，然后再送入后续网络中进行学习:
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/52493e90cb3aaa1c0c6656715b0102f8.png)
+
+首先我们对某一批次的数据的神经元的输出进行标准化
+
+$$
+\begin{align}
+\mu&=\frac{1}{m}\sum_{i}z^i \\
+\sigma^2&=\frac{1}{m}\sum_{i}(z_{i}-\mu)^2 \\
+z_{norm}^{i}&=\frac{{z^i-\mu}}{\sqrt{ \sigma^{2} + \epsilon }} \\
+\end{align}
+$$
+
+然后在使用变换重构，引入了可学习参数 Y、B，如果各隐藏层的输入均值在靠近0的区域，即处于激活函数的线性区域，不利于训练非线性神经网络，从而得到效果较差的模型。因此，需要用 v 和 B 对标准化后的结果做进一步处理
+
+$$
+\bar{z}^i=\gamma z_{morm}^{i}+ \beta
+$$
+
+这就是 BN 层最后的结果。整体流程如下图所示:
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/d3a0dced0abd5dbf44ba239342fb33fd.png)
+
+
+###  2.5 神经网络案例
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/17e1da970913e81daeecd029581c46f5.png)
+
+使用手写数字的 MNIST 数据集如上图所示，该数据集包含60,000个用于训练的样本和10,000个用于测试的样本，图像是固定大小 (28x28像素)，其值为0到255。
+
+整个案例的实现流程是:
+- 数据加载
+- 数据处理
+- 模型构建
+- 模型训练
+- 模型测试
+- 模型保存
+
+首先导入所需的工具包
+
+```python
+import numpy as np  
+import matplotlib.pyplot as plt  
+  
+plt.rcParams['figure.figsize'] = (7, 7)  
+import tensorflow as tf  
+# 数据集  
+from tensorflow.keras.datasets import mnist  
+# 构建序列模型  
+from tensorflow.keras.models import Sequential  
+# 导入需要的层  
+from tensorflow.keras.layers import Dense, Dropout, Activation, BatchNormalization  
+# 导入辅助工具包  
+from tensorflow.keras import utils  
+# 正则化  
+from tensorflow.keras import regularizers
+```
+
+#### 2.5.1 数据加载
+
+```python
+# 类别总数  
+nb_classes = 10  
+# 加载数据集  
+(X_train, y_train), (X_test, y_test) = mnist.load_data()  
+# 打印数据集信息  
+print("训练样本初始维度", X_train.shape)  
+print("训练样本目标值初始维度", y_train.shape)
+```
+
+输出
 
 ```
+训练样本初始维度 (60000, 28, 28)
+训练样本目标值初始维度 (60000,)
+```
+
+数据展示
+
+```python
+# 数据展示  
+for i in range(9):  
+    plt.subplot(3, 3, i + 1)  
+    # 以灰度图显示，不进行插值  
+    plt.imshow(X_train[i], cmap='gray', interpolation='none')  
+    # 设置图片的标题：对应的类别  
+    plt.title("num{}".format(y_train[i]))
+```
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/72714c3e600eac08bdd176dce5a90966.png)
+
+
+#### 2.5.2 数据处理
+
+神经网络中的每个训练样本是一个向量，因此需要对输入进行重塑，使每个28x28的图像成为一个的784维向量。另外，将输入数据进行归一化处理，从0-255调整到0-1。
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/152840bccb8f4410e0c2a7055ab5219f.png)
+
+```python
+# 调整数据维度：每个数字转换成一个向量  
+X_train = X_train.reshape(60000, 784)  
+X_test = X_test.reshape(10000, 784)  
+# 格式转换  
+X_train = X_train.astype('float32')  
+X_test = X_test.astype('float32')  
+# 归一化  
+X_train /= 255  
+X_test /= 255  
+# 维度调整后的结果  
+print("训练集：", X_train.shape)  
+print("测试集：", X_test.shape)
+```
+
+```
+训练集： (60000, 784)
+测试集： (10000, 784)
+```
+
+另外对于目标值我们也需要进行处理，将其转换为热编码的形式:
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/119b2ebfe4072813b4ca33a2519d6e61.png)
+
+```python
+# 将目标值转换为热编码的形式  
+Y_train = utils.to_categorical(y_train, nb_classes)  
+y_test = utils.to_categorical(y_test, nb_classes)
+```
+
+#### 2.5.3 模型构建
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/2ad2aa00a259a1e82969e89c0c1e7723.png)
+
+```python
+# 使用序列模型来构建模型  
+model = Sequential()  
+# 全连接层，共512个神经元，输入维度大小为784  
+model.add(Dense(512, input_shape=(784,)))  
+# 激活函数使用relu  
+model.add(Activation('relu'))  
+# 使用正则化方法drouout  
+model.add(Dropout(0.2))  
+# 全连接层，共512个神经元，并加入L2正则化  
+model.add(Dense(512, kernel_regularizer=regularizers.l2(0.001)))  
+# BN层  
+model.add(BatchNormalization())  
+# 激活函数  
+model.add(Activation('relu'))  
+model.add(Dropout(0.2))  
+# 全连接层  
+model.add(Dense(10))  
+# softmax将神经网络输出的score转换为概率值  
+model.add(Activation('softmax'))
+model.summary()
+```
+
+```
+Model: "sequential_1"
+_________________________________________________________________
+ Layer (type)                Output Shape              Param #   
+=================================================================
+ dense_3 (Dense)             (None, 512)               401920    
+                                                                 
+ activation_3 (Activation)   (None, 512)               0         
+                                                                 
+ dropout_2 (Dropout)         (None, 512)               0         
+                                                                 
+ dense_4 (Dense)             (None, 512)               262656    
+                                                                 
+ batch_normalization_1 (Bat  (None, 512)               2048      
+ chNormalization)                                                
+                                                                 
+ activation_4 (Activation)   (None, 512)               0         
+                                                                 
+ dropout_3 (Dropout)         (None, 512)               0         
+                                                                 
+ dense_5 (Dense)             (None, 10)                5130      
+                                                                 
+ activation_5 (Activation)   (None, 10)                0         
+                                                                 
+=================================================================
+Total params: 671754 (2.56 MB)
+Trainable params: 670730 (2.56 MB)
+Non-trainable params: 1024 (4.00 KB)
+_________________________________________________________________
+```
+
+#### 2.5.4 模型编译
+
+设置模型训练使用的损失函数交叉熵损失和优化方法 adam，损失函数用来衡量预测值与真实值之间的差异，优化器用来使用损失函数达到最优:
+```python
+# 模型编译，指明损失函数和优化器，评估指标  
+model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])
+```
+
+#### 2.5.5 模型训练
+
+```python
+# batch_size 是每次送入模型的样本个数，epochs是所有样本的迭代次数，并指明验证数据集  
+history = model.fit(X_train, Y_train, batch_size=128, epochs=4, verbose=1, validation_data=(X_test, y_test))
+```
+
+训练过程
+
+```
+Epoch 1/4
+469/469 [==============================] - 6s 12ms/step - loss: 0.1210 - accuracy: 0.9794 - val_loss: 0.1362 - val_accuracy: 0.9748
+Epoch 2/4
+469/469 [==============================] - 6s 12ms/step - loss: 0.1145 - accuracy: 0.9805 - val_loss: 0.1251 - val_accuracy: 0.9772
+Epoch 3/4
+469/469 [==============================] - 6s 12ms/step - loss: 0.1102 - accuracy: 0.9822 - val_loss: 0.1359 - val_accuracy: 0.9744
+Epoch 4/4
+469/469 [==============================] - 6s 12ms/step - loss: 0.1013 - accuracy: 0.9837 - val_loss: 0.1155 - val_accuracy: 0.9795
+```
+
+损失曲线
+
+```python
+# 绘制损失函数的变化曲线  
+plt.figure()  
+# 训练集损失函数变换  
+plt.plot(history.history['loss'], label='train_loss')  
+# 验证集损失函数变化  
+plt.plot(history.history['val_loss'], label='val_loss')  
+plt.legend()  
+plt.grid()
+```
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/5d753fde3d694ce3ed1262abf3a7d821.png)
+
+准确率
+
+```python
+# 准确率  
+plt.figure()  
+plt.plot(history.history['accuracy'], label='train')  
+plt.plot(history.history['val_accuracy'], label='val')  
+plt.legend()  
+plt.grid()
+```
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/b83d87a0b484bef33b2c2a4ff0223136.png)
+
+另外可通过 tensorboard 监控训练过程，这时我们指定回调函数
+```python
+# 添加tensorboard观察  
+tensorboard = tf.keras.callbacks.TensorBoard(log_dir='./graph', histogram_freq=1, write_graph=True, write_images=True)
+```
+
+再进行训练
+```python
+# 再进行训练  
+history = model.fit(X_train, Y_train, batch_size=128, epochs=4, verbose=1, callbacks=[tensorboard],  
+                    validation_data=(X_test, y_test))
+```
+
+打开终端
+```bash
+# 指定存在文件的目录，打开下面命令
+tensorboard --logdir="./graph"
+```
+
+打开http://localhost:6006/查看训练详情
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/221b32fb96a6f8db8fdc5a5cae03c73f.png)
+
+#### 2.5.6 模型测试
+
+```python
+# 模型测试  
+score = model.evaluate(X_test, y_test, verbose=1)  
+# 打印结果  
+print("测试集准确率:", score)
+```
+
+```
+313/313 [==============================] - 1s 2ms/step - loss: 0.1187 - accuracy: 0.9802
+测试集准确率: [0.11868521571159363, 0.9801999926567078]
+```
+
+#### 2.5.7 模型保存
+
+```python
+# 保存模型架构与权重在h5文件中  
+model.save('my_model.h5')  
+# 加载模型：包括架构和对应的权重  
+model = tf.keras.models.load_model('my_model.h5')
+```
+
+### 2.6 卷积神经网络 CNN
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/a4fb737809cbabe671ac9c111962ef6e.png)
+
+利用全连接神经网络对图像进行处理存在以下两个问题
+
+1. **需要处理的数据量大，效率低**
+
+假如我们处理一张 1000x1000 像素的图片，参数量如下
+1000x1000x3=3,000,000
+
+这么大量的数据处理起来是非常消耗资源的
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/55e78c72cbb9400ba0f2dec299550b37.png)
+
+2. **图像在维度调整的过程中很难保留原有的特征，导致图像处理的准确率不高**
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/337f8eb998db30b475ac42d1aeb92eb8.png)
+
+假如有圆形是1，没有圆形是0，那么圆形的位置不同就会产生完全不同的数据表达。但是从图像的角度来看，图像的内容 (本质)、并没有发生变化，只是位置发生了变化。所以当我们移动图像中的物体，用全连接升降得到的结果会差异很大，这是不符合图像处理的要求的。
+
+#### 2.6.1 CNN 网络的构成
+
+CNN 网络受人类视觉神经系统的启发，人类的视觉原理: 从原始信号摄入开始 (瞳孔摄入像素Pixels)，接着做初步处理 (大脑皮层某些细胞发现边缘和方向)，然后抽象 (大脑判定，眼前的物体的形状，是圆形的)，然后进一步抽象 (大脑进一步判定该物体是只人脸) 。下面是人脑进行人脸识别的一个示例:
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/6649268803950c92d8744a915d9f3c4b.png)
+
+CNN 网络主要有三部分构成: 卷积层、池化层和全连接层构成，其中卷积层负责提取图像中的局部特征; 池化层用来大幅降低参数量级 (降维); 全连接层类似人工神经网络的部分，用来输出想要的结果。
+
+ ![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/2cd23c788078b292dc332b7d82c767d8.png)
+
+整个 CNN 网络结构如下图所示:
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/87431a9a8dd05c92f1aebb557f075ad5.png)
+
+
+#### 2.6.2 卷积层
+
+卷积层是卷积神经网络中的核心模块，卷积层的目的是提取输入特征图的特征，如下图所示，卷积核可以提取图像中的边缘信息。
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/2de9149eb27b2ebe6b4d16efe828b00f.png)
+
+##### 2.6.2.1 卷积的计算方法
+
+卷积是如何进行计算的
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/e6375c00debc53aab565c96f24818892.png)
+
+卷积运算本质上就是在滤波器和输入数据的局部区域间做点积
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/00005b8f33209e11ced85c043da92043.png)
+
+左上角的点计算方法：
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/a5a2b98dc72685087d425dd7bc1cdd2f.png)
+
+同理可以计算其他各点，得到最终的卷积结果
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/d532aa52934c4dff55282f725d882220.png)
+
+最后一点的计算方法是:
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/bbb8c95387a7bf0f9b50e0ee38eb0135.png)
+
+##### 2.6.2.2 填充 (padding)
+
+在上述卷积过程中，特征图比原始图减小了很多，我们可以在原图像的周围进行 padding, 来保证在卷积过程中特征图大小不变。
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/c851438a1503f837df7bb14e0e876778.png)
+
+##### 2.6.2.3 步长 (stride)
+
+按照步长为1来移动卷积核，计算特征图如下所示
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/c3d8b9d4f5dcfa4e44ffae712573d9d6.png)
+
+如果我们把 stride 增大, 比如设为2，也是可以提取特征图的，如下图所示:
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/4983d93955a7f17a2e4ec6756e23f8f3.png)
+
+##### 2.6.2.4 多通道卷积
+
+实际中的图像都是多个通道组成的，我们怎么计算卷积呢?
+
+ ![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/baf7260c676717e88ff5b442a3dfb89d.png)
+
+计算方法如下: 当输入有多个通道 (channel)时 (例如图片可以有 RGB 三个通道)，卷积核需要拥有相同的 channel 数每个卷积核 channel 与输入层的对应 channel 进行卷积，将每个 channel 的卷积结果按位相加得到最终的 Feature Map
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/76e5e80e7c70af75e7272ecb9d2fc5ea.png)
+
+##### 2.6.2.5 多卷积核卷积
+
+如果有多个卷积核时怎么计算呢? 当有多个卷积核时，每个卷积核学习到不同的特征，对应产生包含多个 channel 的 Feature Map, 例如下图有两个 flter，所以 output 有两个 channel。
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/5a73e580750e0cc34078d2ad250c8f54.png)
+##### 2.6.2.6 特征图大小
+
+输出特征图的大小与以下参数息息相关: size: 卷积核/过滤器大小，一般会选择为奇数，比如有 $1*1$，$3*3$，$5*5*padding$: 零填充的方式 stride: 步长
+
+那计算方法如下图所示:
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/759c77d53546035b4573a3cee6bf26dd.png)
+
+输入特征图为5x5，卷积核为3x3，外加 padding 为1，则其输出尺寸为
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/533f5d84fac5d2969e2864d4759497a4.png)
+
+如下图所示:
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/b5b156a028de275f34dbee1e630d8406.png)
+
+在 tf. keras 中卷积核的使用
+```python
+tf.keras.layers.Conv2D(  
+    filter, kernel_size, strides=(1, 1), padding='valid', activation=None  
+)
+```
+
+主要参数说明如下
+
+
+| 参数          | 描述                                                       |
+| ----------- | -------------------------------------------------------- |
+| filters     | 卷积过滤器的数量, 对应输出特征图的通道数                                    |
+| kernel_size | 过滤器 flter 的大小                                            |
+| strides     | 步长                                                       |
+| padding     | valid: 在输入周围不进行 padding; same: padding 后使输出特征图和输入特征图形状相同 |
+| activation  | 激活函数                                                     |
+#### 2.6.3 池化层 (pooling)
+
+池化层迎来降低了后续网络层的输入维度，缩减模型大小，提高计算速度，并提高了 Feature Map的鲁棒性，防止过拟合
+
+它主要对卷积层学习到的特征图进行下采样 (subsampling)处理，主要有两种
+
+##### 2.6.3.1 最大池化
+
+**MaxPooling, 取窗口内的最大值作为输出**，这种方式使用较广泛
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/2365ced3477351fe5881af3723c87404.png)
+
+##### 2.6.3.2 平均池化
+
+**Avg Pooling, 取窗口内的所有值的均值作为输出**
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/8c5c2af3f81badd87d7967ceaffcfccd.png)
+
+#### 2.6.4 全连接层
+
+全连接层位于 CNN 网络的末端，经过卷积层的特征提取与池化层的降维后，将特征图转换成一维向量送入到全连接层中进行分类或回归的操作。
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/10e79e63d1b9c1af3de716554ec1e617.png)
+
+在 tf. keras 中全连接层使用 tf. keras. dense 实现。
+#### 2.6.5 卷积神经网络的搭建
+
+我们构建卷积神经网络在 mnist 数据集上进行处理，如下图所示: LeNet-5是一个较简单的卷积神经网络, 输入的二维图像，先经过两次卷积层, 池化层，再经过全连接层，最后使用 softmax 分类作为输出层。
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/03438f7b0efda3c69ea81935b81bf879.png)
+
+
+##### 2.6.5.1 数据加载
+
+```python
+(train_images, train_labels), (test_images, test_labels) = mnist.load_data()
+```
+
+##### 2.6.5.2 数据处理
+
+卷积神经网络的输入要求是: N H W C，分别是图片数量，图片高度，图片宽度和图片的通道，因为是灰度图，通道为1.
+
+```python
+# 数据处理：num,h,w,c  
+train_images = tf.reshape(train_images, (train_images.shape[0], train_images.shape[1], train_images.shape[2], 1))  
+print(train_images.shape)  
+# 测试集数据  
+test_images = tf.reshape(test_images, (test_images.shape[0], test_images.shape[1], test_images.shape[2], 1))
+```
+
+结果
+
+```
+(60000, 28, 28, 1)
+```
+
+##### 2.6.5.3 模型构建
+
+Lenet-5模型输入的二维图像，先经过两次卷积层, 池化层，再经过全连接层，最后使用 softmax 分类作为输出层，模型构建如下:
+
+```python
+# 模型构建  
+net = tf.keras.models.Sequential([  
+    # 卷积层：6个5*5的卷积核，激活是sigmoid  
+    tf.keras.layers.Conv2D(filters=6, kernel_size=5, activation='sigmoid', input_shape=(28, 28, 1)),  
+    # 最大池化  
+    tf.keras.layers.MaxPool2D(pool_size=2, strides=2),  
+    # 卷积层：16个5*5的卷积核，激活是sigmoid  
+    tf.keras.layers.Conv2D(filters=16, kernel_size=5, activation='sigmoid'),  
+    # 最大池化  
+    tf.keras.layers.MaxPool2D(pool_size=2, strides=2),  
+    # 维度调整为1为数据  
+    tf.keras.layers.Flatten(),  
+    # 全卷积层，激活sigmoid  
+    tf.keras.layers.Dense(120, activation='sigmoid'),  
+    # 全卷积层，激活sigmoid  
+    tf.keras.layers.Dense(84, activation='sigmoid'),  
+    # 全卷积层，激活softmax  
+    tf.keras.layers.Dense(10, activation='softmax')  
+])  
+net.summary()
+```
+
+```
+Model: "sequential_1"
+_________________________________________________________________
+ Layer (type)                Output Shape              Param #   
+=================================================================
+ conv2d_2 (Conv2D)           (None, 24, 24, 6)         156       
+                                                                 
+ max_pooling2d_2 (MaxPoolin  (None, 12, 12, 6)         0         
+ g2D)                                                            
+                                                                 
+ conv2d_3 (Conv2D)           (None, 8, 8, 16)          2416      
+                                                                 
+ max_pooling2d_3 (MaxPoolin  (None, 4, 4, 16)          0         
+ g2D)                                                            
+                                                                 
+ flatten_1 (Flatten)         (None, 256)               0         
+                                                                 
+ dense_3 (Dense)             (None, 120)               30840     
+                                                                 
+ dense_4 (Dense)             (None, 84)                10164     
+                                                                 
+ dense_5 (Dense)             (None, 10)                850       
+                                                                 
+=================================================================
+Total params: 44426 (173.54 KB)
+Trainable params: 44426 (173.54 KB)
+Non-trainable params: 0 (0.00 Byte)
+_________________________________________________________________
+```
+
+```python
+tf.keras.utils.plot_model(net)
+```
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/85ba6e24120dca9b93d9945cd5c9a35f.png)
+
+##### 2.6.5.4 模型编译
+
+设置优化器和损失函数:
+
+```python
+# 优化器  
+optimizer = tf.keras.optimizers.SGD(learning_rate=0.9)  
+# 模型编译：损失函数，优化器和评价指标  
+net.compile(optimizer=optimizer, loss='sparse_categorical_crossentropy', metrics=['accuracy'])
+```
+
+##### 2.6.5.5 模型训练
+
+```python
+# 模型训练  
+net.fit(train_images, train_labels, epochs=5, validation_split=0.1)
+```
+
+训练过程
+
+```
+Epoch 1/5
+1688/1688 [==============================] - 8s 5ms/step - loss: 0.0644 - accuracy: 0.9792 - val_loss: 0.0532 - val_accuracy: 0.9837
+Epoch 2/5
+1688/1688 [==============================] - 8s 5ms/step - loss: 0.0589 - accuracy: 0.9811 - val_loss: 0.0813 - val_accuracy: 0.9750
+Epoch 3/5
+1688/1688 [==============================] - 8s 5ms/step - loss: 0.0546 - accuracy: 0.9830 - val_loss: 0.0605 - val_accuracy: 0.9807
+Epoch 4/5
+1688/1688 [==============================] - 8s 5ms/step - loss: 0.0470 - accuracy: 0.9849 - val_loss: 0.0490 - val_accuracy: 0.9865
+Epoch 5/5
+1688/1688 [==============================] - 8s 5ms/step - loss: 0.0399 - accuracy: 0.9873 - val_loss: 0.0595 - val_accuracy: 0.9817
+
+<keras.src.callbacks.History at 0x29c2c9b6a10>
+```
+
+##### 2.6.5.6 模型评估
+
+```python
+# 模型评估  
+score = net.evaluate(test_images, test_labels, verbose=1)  
+print('Test accuray:', score[1])
+```
+
+```
+313/313 [==============================] - 1s 3ms/step - loss: 0.0571 - accuracy: 0.9807
+Test accuray: 0.9807000160217285
+```
+
+与使用全连接网络相比，准确度提高了很多
+
+
+## 3. 图像分类
+
