--- a/python/人工智能/人工智能.md
+++ b/python/人工智能/人工智能.md
@@ -3118,3 +3118,45 @@ Test accuray: 0.9807000160217285
 
 ## 3. 图像分类
 
+### 3.1 图像分类简介
+图像分类实质上就是从给定的类别集合中为图像分配对应标签的任务。也就是说我们的任务是分析一个输入图像并返回一个该图像类别的标签。
+
+假定类别集为 categories ={dog, cat, panda)，之后我们提供一张图片给分类模型，如下图所示:
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/5dfc1240a5b849a29895d80ae1f8d066.png)
+
+分类模型给图像分配多个标签，每个标签的概率值不同，如 dog:95%，cat:4%，panda:1%，根据概率值的大小将该图片分类为 dog，那就完成了图像分类的任务。
+
+#### 3.1.1 常用数据集 
+
+**mnist 数据集**
+
+该数据集是手写数字0-9的集合，共有60k 训练图像、10k 测试图像、10个类别、图像大小28x28x1。我们可以通过 tf. keras 直接加载该数据集:
+```python
+from tensorflow.keras.datasets import mnist
+# 加载mnist数据集
+(train_images, train_labels), (test_images, test_labels) = mnist.load_data()
+```
+
+**CIFAR-10 和 CIFAR-100**
+
+CIFAR-10数据集5万张训练图像、1万张测试图像、10个类别、每个类别有6k 个图像，图像大小32x32x3。下图举了10个类，每一类随机展示了10张图片:
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/3c9dd2b32e525d45d9f8aeea91e7d18b.png)
+
+CIFAR-100数据集也是有5万张训练图像、1万张测试图像、包含100个类别、图像大小32x32x3。
+
+在 tf. keras 中使用
+```python
+import tensorflow as tf
+from tensorflow.keras.datasets import cifar10, cifar100
+# 加载cifar10数据集
+(train_images, train_labels), (test_images, test_labels) = cifar10.load_data()
+# 加载cifar100数据集
+(train_images, train_labels), (test_images, test_labels) = cifar100.load_data()
+```
+
+**ImageNet**
+
+lmageNet 数据集是 LSVRC 竞赛使用的是数据集，由斯坦福大学李飞飞教授主导，包含了超过1400万张全尺寸的有标记图片，大约有22000个类别的数据。ILSVRC 全称 ImageNetLarge-Scale Visua Recognition Challenge，是视觉领域最受追捧也是最具权威的学术竞赛之一，代表了图像领域的最高水平。从2010年开始举办到2017年最后一届，使用 ImageNet 数据集的一个子集，总共有1000类。
+
