--- a/python/人工智能/人工智能.md
+++ b/python/人工智能/人工智能.md
@@ -3127,7 +3127,7 @@ Test accuray: 0.9807000160217285
 
 分类模型给图像分配多个标签，每个标签的概率值不同，如 dog:95%，cat:4%，panda:1%，根据概率值的大小将该图片分类为 dog，那就完成了图像分类的任务。
 
-#### 3.1.1 常用数据集 
+### 3.2 常用数据集 
 
 **mnist 数据集**
 
@@ -3159,4 +3159,12 @@ from tensorflow.keras.datasets import cifar10, cifar100
 **ImageNet**
 
 lmageNet 数据集是 LSVRC 竞赛使用的是数据集，由斯坦福大学李飞飞教授主导，包含了超过1400万张全尺寸的有标记图片，大约有22000个类别的数据。ILSVRC 全称 ImageNetLarge-Scale Visua Recognition Challenge，是视觉领域最受追捧也是最具权威的学术竞赛之一，代表了图像领域的最高水平。从2010年开始举办到2017年最后一届，使用 ImageNet 数据集的一个子集，总共有1000类。
+
+### 3.3 AlexNet
+
+#### 3.3.1 AlexNet 的网络结构
+
+AlexNet 与 LeNet 的设计理念非常相似，但也有显著的区别，其网络架构如下图所示
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/a5feefb209b30a57e82bfe84df25770b.png)
 
